# IDM_Download_Monitor

./: .gitignore  CLEANUP_SUMMARY.md  DAILY_TASK_SETUP.md  MIGRATION.md  OPTIMIZATION_SUMMARY.md  README.md  app.py  check_encoding.py  cleanup_cache.py  config.json  config_manager.py  duplicate_detector.py  extensions.py  file_monitor.py  file_organizer.py  gui_app.py  gui_config.json  progress_tracker.py  pyproject.toml  requirements.txt  settings_window.py  start.bat  start.ps1  start_daily.bat  start_gui.bat  view_daily_logs.bat
